--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,10 @@
 # Items to ignore when downloading a zip
 
-assets
-.babelrc export-ignore
-.editorconfig export-ignore
+# Files
 .gitattributes export-ignore
+pmpro-buddypress-banner.png export-ignore
+README.md export-ignore
+
+# Folders
 .github export-ignore
-.gitignore export-ignore
-.travis.yml export-ignore
-package-lock.json export-ignore
-package.json export-ignore
-phpcs.xml.dist export-ignore
-phpunit.xml.dist export-ignore
-tests export-ignore
-webpack.config.js export-ignore
+.wordpress-org export-ignore
